# oop

./: .gitignore  .gitmodules  README.md
gcc/: Makefile  README.md  docker-compose.yml
git-guides/: README.md
tasks/: README.md
tasks/semester-1/task-0-bit-operations/: README.MD
tasks/semester-1/task-1/: README.md  variant.js
tasks/semester-1/task-1-matrix/: README.md  variant.js
tasks/semester-1/task-2/: README.MD
tasks/semester-1/task-2-hashtag/: README.md
tasks/semester-1/task-3/: README.MD
tasks/semester-1/task-3-base64/: README.md
tasks/semester-1/task-4/: README.MD
tasks/semester-1/task-4-structures/: README.md
tasks/semester-1/task-5/: README.md
tasks/semester-1/task-5-parallel/: README.md
tasks/semester-1/task-6/: README.md
tasks/semester-1/task-6-rpn/: README.md
tasks/semester-1/task-7/: README.md
tests-example/: CMakeLists.txt  main.cpp  tests.cpp
tests-example/stack/: CMakeLists.txt
tests-example/stack/include/: stack.h
tests-example/stack/src/: stack.cpp
